toppings images added

--- a/app/views/order-view/order-view.css
+++ b/app/views/order-view/order-view.css
@@ -62,3 +62,13 @@
     color: black;
 
 }
+
+.topping-image{
+    width: 50;
+    height: 50;
+    border-radius: 50%;
+}
+
+.scroll-view{
+    background-color: aquamarine;
+}
