--- a/app/views/order-view/order-view.css
+++ b/app/views/order-view/order-view.css
@@ -4,63 +4,58 @@
     background-size: cover;
     background-image: url("res://pizza_board");
 }
-.pizza-image-container{
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("res://pizza_circle");
-}
+
 .order-page-overlay{
     background-color: rgba(217, 220, 252, 0.8);
-    padding: 20;
+    padding: 10;
 }
 
-.sizes-item-wrapper{
-    /* margin-right: 20; */
-}
 
 .sizes-text-description{
-    font-size: 20;
-    color: black;
     text-align: center;
 }
 
-.sizes-price-tag{
-    top: 0;
-    right: 0;
-} 
-.price-tag{
-    background-color: rgba(3, 187, 58, 0.9);
-    color: white;
-    font-size: 20;
-    border-radius: 50%;
-    margin-left: 25;
-    
+.toppings-text-description{
+    text-align: center;
 }
 
+.text-description{
+    font-size: 20;
+    color: black;
+}
 .size-marker-selected{
     height: 5;
     margin: 5;
-    background-color: green;
+    background-color: rgb(0, 77, 23);
 }
 
 .size-marker-unselected{
     height: 5;
     margin: 5;
-    /* background-color: rgb(141, 3, 141); */
 }
 
-.order-label{
+.order-group-label{
     font-size: 20;
     color: rgb(0, 77, 23);
     margin-top:10;
 }
 
+.order-total-text{
+    font-weight: bold;
+    margin: 5;
+    min-width: 150;
+    text-align: center;
+}
+
+.order-total-wrapper{
+    /* border-radius: 5; */
+    border-width: 2 0 1 0;
+    border-color: rgb(0, 77, 23);
+}
 .order-label-greeting{
     font-size: 25;
     font-weight: bold;
     color: black;
-
 }
 
 .topping-image{
@@ -69,6 +64,55 @@
     border-radius: 50%;
 }
 
-.scroll-view{
-    background-color: aquamarine;
+.topping-item-container{
+    margin-right: 10;
+    margin-top: 10;
+}
+
+.extras-button{
+    width: 30;
+    height: 30;
+    color: white;
+    font-size: 20;
+    background-color: rgb(0, 77, 23);
+    border-radius: 50%;
+    margin: 5;
+    padding: 0;
+}
+
+.topping-image-selected{
+    width: 50;
+    height: 50;
+    border-radius: 50%;
+    border-width: 3;
+    border-color: rgb(0, 77, 23);
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.pizza-image{
+
+}
+
+.pizza-image-selected{
+    border-radius: 50%;
+    border-width: 3;
+    border-color: rgb(0, 77, 23);
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.choose-size-label{
+    margin-bottom: -20;
 }
