--- a/app/app.css
+++ b/app/app.css
@@ -20,6 +20,17 @@ components that have the btn class name.
     background-color: white;
 
 }
+
+.page-container{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url("res://pizza_board");
+}
+
+.logo-image{
+    margin-bottom: 20;
+}
 /*
 In many cases you may want to use the NativeScript core theme instead
 of writing your own CSS rules. For a full list of class names in the theme
