platform specific styles, http call

--- a/app/app.css
+++ b/app/app.css
@@ -1,13 +1,5 @@
-﻿/*
-In NativeScript, the app.css file is where you place CSS rules that
-you would like to apply to your entire application. Check out
-http://docs.nativescript.org/ui/styling for a full list of the CSS
-selectors and properties you can use to style UI components.
+﻿@import './tools/assets/platformStyles.css';
 
-/*
-For example, the following CSS rule changes the font size of all UI
-components that have the btn class name.
-*/
 .btn {
     font-size: 18;
 }
@@ -18,7 +10,6 @@ components that have the btn class name.
     border-width: 3;
     color:#FF3700;
     background-color: white;
-
 }
 
 .page-container{
@@ -31,9 +22,5 @@ components that have the btn class name.
 .logo-image{
     margin-bottom: 20;
 }
-/*
-In many cases you may want to use the NativeScript core theme instead
-of writing your own CSS rules. For a full list of class names in the theme
-refer to http://docs.nativescript.org/ui/theme.
-*/
+
 @import '~nativescript-theme-core/css/core.light.css';
